# ml-project-template

./: .gitignore  .pre-commit-config.toml  README.md  pyproject.toml
tests/: test_preprocessing.py
